# jobworkerp-rs

./: .agent_prompt.txt  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.cpu  Dockerfile.full  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_JA.md  README.md  README_ja.md  STREAMING.md  STREAMING_ja.md  compose-scalable.env  compose.env  docker-compose-scalable.yml  docker-compose-test.yml  docker-compose.yml  dot.env  grpc-web-function-interface.md  mcp-settings-sample.toml
ag-ui-front/: Cargo.toml  README.md  README_ja.md  test
ag-ui-front/ag-ui-client-sample/: README.md  next.config.ts  package.json  pnpm-lock.yaml
ag-ui-front/docs/: CLIENT_GUIDE.md  CLIENT_GUIDE_ja.md
ag-ui-front/src/: config.rs  error.rs  events.rs  handler.rs  handler_async.rs  lib.rs  pubsub.rs  server.rs  session.rs  types.rs
ag-ui-front/src/events/: adapter.rs  encoder.rs  llm.rs  state_diff.rs  types.rs
ag-ui-front/src/server/: auth.rs  embedded.rs  http.rs  http_async.rs  types.rs
ag-ui-front/src/session/: manager.rs  redis_manager.rs  redis_store.rs  store.rs
ag-ui-front/src/types/: context.rs  ids.rs  input.rs  message.rs  state.rs  tool.rs
ag-ui-front/tests/: integration_test.rs
app/: Cargo.toml
app-wrapper/: Cargo.toml
app-wrapper/src/: function_set_selector.rs  lib.rs  llm.rs  main.rs  modules.rs  runner.rs  workflow.rs
app-wrapper/src/llm/: args.rs  cancellation_helper.rs  chat.rs  completion.rs  genai.rs  generic_tracing_helper.rs  mistral.rs  model.rs  ollama.rs  result.rs  schema_sanitize.rs  tracing.rs  unified.rs
app-wrapper/src/runner/: cancellation.rs
app-wrapper/src/simple_workflow/: definition.rs  execute.rs  runner.rs
app-wrapper/src/workflow/: create_workflow.rs  definition.rs  execute.rs  runner.rs
app-wrapper/test-files/: deep_nested_checkpoint.yaml  err-test.yaml  for_task_checkpoint.yaml  ls-function-test.yaml  ls-test.yaml  streaming-test.yaml  switch.yaml  try_task_checkpoint.yaml  validation-err.yaml  workflow-call-http-test.yaml
app-wrapper/test-files/python/: README-PYTHON-SCRIPT.md  workflow-python-script-advanced.yaml  workflow-python-script-basic.yaml  workflow-python-script-chained.yaml  workflow-python-script-simple.yaml
app-wrapper/tests/: README_SCRIPT_E2E_TESTS.md  SCRIPT_E2E_TESTS_STATUS.md  actual_workflow_validation_benchmark.rs  create_workflow_db_integration_test.rs  function_set_selector_integration_test.rs  genai_json_schema_test.rs  genai_otel_tracing_test.rs  llm_cancellation_test.rs  llm_unified_runner_test.rs  manual_tool_call_test.rs  mistral_json_schema_test.rs  ollama_json_schema_test.rs  ollama_otel_tracing_test.rs  ollama_tool_call_integration_test.rs  protobuf_descriptor_oneof_test.rs  run_stream_task_executor_integration_test.rs  run_stream_task_executor_test.rs  script_runner_e2e_test.rs  script_security_tests.rs  simple_genai_tool_test.rs  simple_ollama_tool_test.rs  streaming_tool_call_test.rs  workflow_cancellation_test.rs  workflow_nested_cancellation_test.rs  workflow_otel_tracing_test.rs  workflow_schema_validation_benchmark.rs  workflow_try_catch_test.rs  workflow_unified_runner_test.rs
app/src/: app.rs  module.rs
app/src/app/: job.rs  (+8 more)
app/tests/: function_create_worker_test.rs  function_create_workflow_test.rs  function_set_detail_test.rs  function_workflow_llm_integration_test.rs
base/: Cargo.toml
base/src/: codec.rs  error.rs  job_status_config.rs  lib.rs  limits.rs  worker_instance_config.rs
common/: Cargo.toml
common/src/: infra.rs  lib.rs
grpc-front/: Cargo.toml  Dockerfile  Dockerfile.cpu  build.rs
grpc-front/src/: lib.rs  proto.rs  service.rs
grpc-front/tests/: checkpoint_service_test.rs  worker_instance_grpc_test.rs  workflow_for_loop_streaming_test.rs  workflow_streaming_reproduction_test.rs
infra/: Cargo.toml  build.rs
infra/src/: error.rs  infra.rs  lib.rs  workflow.rs
mcp-server/: Cargo.toml  Dockerfile  Dockerfile.cpu  README.md  README_ja.md
mcp-server/src/: config.rs  handler.rs  lib.rs
mcp-server/tests/: handler_integration_test.rs
modules/jobworkerp-plugin-abi/: Cargo.toml
plugins/cancel_test/: Cargo.toml
plugins/collectable_test/: Cargo.toml  build.rs
plugins/hello_runner/: Cargo.toml  build.rs
plugins/jobworkerp_mistral_runner/: Cargo.toml  build.rs
plugins/mistral_runner/: Cargo.toml  README.md  build.rs
plugins/panic_ctor_test/: Cargo.toml
plugins/test_runner/: Cargo.toml  build.rs
proto/: Cargo.toml  build.rs
proto/protobuf/: test_args.proto  test_operation.proto  test_result.proto  test_runner.proto
proto/src/: lib.rs  log_ext.rs  tests.rs
runner/: Cargo.toml  build.rs
runner/benches/: sink_throughput.rs
runner/schema/: LLMArgs.json  LLMResult.json  LLMRunnerSettings.json  PythonCommandArgs.json  PythonCommandRunnerSettings.json  WorkflowArgs.json  workflow.json  workflow.rs  workflow.yaml  workflow_8level_final.json  workflow_minimal_fix.json
runner/src/: lib.rs  runner.rs  validation.rs
runner/tests/: plugin_backward_compat_test.rs  plugin_v2_cancel_test.rs  plugin_v2_panic_ctor_test.rs
tests-with-worker/: Cargo.toml  build.rs
tests-with-worker/protobuf/: echo.proto
tests-with-worker/src/: lib.rs
tests-with-worker/tests/: app_wrapper.rs  client_stream_e2e_test.rs  worker_backend_test.rs
worker-app/: Cargo.toml  build.rs
worker-app/protobuf/: command_args.proto  command_operation.proto  docker_args.proto  docker_operation.proto  grpc_unary_args.proto  grpc_unary_operation.proto  http_request_args.proto  http_request_operation.proto  slack_job_args.proto  slack_operation.proto
worker-app/src/: lib.rs  plugins.rs  proto.rs  worker.rs
worker-app/tests/: cancellation_e2e.rs  grpc_unary_runner_e2e.rs  real_command_runner_e2e.rs  real_docker_runner_e2e.rs  real_grpc_runner_e2e.rs  real_http_request_runner_e2e.rs  real_inline_workflow_runner_e2e.rs  real_python_runner_e2e.rs  runner_e2e.rs  slack_runner_e2e.rs  worker_instance_concurrency_test.rs  worker_instance_lifecycle_test.rs  worker_pool_release_test.rs
worker-main/: Cargo.toml  Dockerfile  Dockerfile.cpu
worker-main/src/: instance.rs  lib.rs  main.rs
(+596 files in other folders)
