[workspace]

members = [
    "modules/command-utils",
    "modules/infra-utils",
    "proto",
    "infra",
    "plugins/test_runner",
    "worker-app",
    "grpc-front",
    "worker-main",
    "plugins/hello_runner",
]

resolver = "2"

[workspace.package]
version = "0.6.1"
edition = "2021"
authors = ["sutr"]
name = "jobworkerp-rs"
description = "Job-Worker system with gRPC front server"
repository = "https://github.com/jobworkerp-rs/jobworkerp-rs"
keywords = ["job-worker", "job-scheduler", "concurrency"]
categories = ["web-programming"]
license = "Apache 2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = "4.0"
chrono = "0.4"
dashmap = "6"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1", "cluster"] }
debug_stub_derive = "0.3"
bollard = { version = "0.18", features = ["buildkit", "chrono", "ssl"] }
bytes = "1.9"
#console-subscriber = { version = "0.3", features = ["parking_lot"] }
envy = "0.4"
dotenvy = "0.15"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = "0.3"
http = "1.2"
itertools = "0.13"
lazy_static = "1.4"
libloading = "0.8"
log = "0.4"
num_cpus = "1.0"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1"
pnet = "0.35"
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14"
rand = "0.8"
regex = "1.11"
redis = { version = "0.27", features = [
    "tokio-rustls-comp",
    "r2d2",
    "ahash",
    "cluster-async",
] }
reqwest = "0.12"
rs-snowflake = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "3.0"
signal-hook = "0.3"
signal-hook-tokio = "0.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "mysql",
    "chrono",
] }
stretto = { version = "0.8", features = ["async"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0"
tonic = { version = "0.12" }
tonic-build = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "process",
    "parking_lot",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
    "json",
] }
url = "2.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"
