[workspace]

members = [
    "modules/command-utils",
    "modules/infra-utils",
    "proto",
    "base",
    "runner",
    "plugins/test_runner",
    "plugins/hello_runner",
    "infra",
    "app",
    "app-wrapper",
    "worker-app",
    "grpc-front",
    "worker-main",
]

resolver = "2"

[workspace.package]
version = "0.12.2"
edition = "2021"
authors = ["sutr"]
description = "Job-Worker system with gRPC front server"
repository = "https://github.com/jobworkerp-rs/jobworkerp-rs"
keywords = ["job-worker", "job-scheduler", "concurrency"]
categories = ["web-programming"]
license = "Apache 2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
base64 = "0.22"
clap = "4.5"
chrono = "0.4"
dashmap = "6"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-redis = { version = "0.20", features = ["rt_tokio_1", "cluster"] }
debug_stub_derive = "0.3"
bollard = { version = "0.18", features = ["buildkit", "chrono", "ssl"] }
bytes = "1.9"
#console-subscriber = { version = "0.3", features = ["parking_lot"] }
envy = "0.4"
dotenvy = "0.15"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = "0.3"
http = "1.3"
itertools = "0.14"
lazy_static = "1.4"
libloading = "0.8"
log = "0.4"
mockall = "0.13"
nix = "0.29"
num_cpus = "1.0"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1"
pnet = "0.35"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.15", features = ["serde"] }
rand = "0.9"
regex = "1.11"
redis = { version = "0.29", features = [
    "tokio-rustls-comp",
    "ahash",
    "cluster-async",
] }
reqwest = "0.12"
rs-snowflake = "0.6"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
schemars = { version = "1.0.0-alpha.17", features = ["chrono04"] }
#schemars = { version = "0.8", features = ["chrono"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "3.0"
serde_yaml = "0.9"
signal-hook = "0.3"
signal-hook-tokio = "0.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "sqlite",
    "mysql",
    "chrono",
] }
stretto = { version = "0.8", features = ["async"] }
strum = "0.27"
strum_macros = "0.27"
tempfile = "3.17"
thiserror = "2.0"
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
tonic-build = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
tonic-web = "0.13"
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
    "json",
] }
url = "2.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"
