[workspace]

members = [
    "modules/command-utils",
    "modules/infra-utils",
    "proto",
    "base",
    "runner",
    "plugins/test_runner",
    "plugins/hello_runner",
    "plugins/legacy_compat_test",
    "infra",
    "app",
    "app-wrapper",
    "worker-app",
    "grpc-front",
    "worker-main",
    "mcp-server",
    "ag-ui-front",
]

resolver = "2"

[workspace.package]
version = "0.18.1"
edition = "2021"
authors = ["sutr"]
description = "Job-Worker system with gRPC front server"
repository = "https://github.com/jobworkerp-rs/jobworkerp-rs"
keywords = ["job-worker", "job-scheduler", "concurrency"]
categories = ["web-programming"]
license = "Apache 2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
base64 = "0.22"
bb8 = "0.9"
bollard = { version = "0.20", features = ["buildkit", "chrono", "ssl"] }
bytes = "1.9"
clap = "4.5"
#console-subscriber = { version = "0.3", features = ["parking_lot"] }
chrono = "0.4"
dashmap = "6"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
debug_stub_derive = "0.3"
envy = "0.4"
dotenvy = "0.15"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = "0.3"
hostname = "0.4"
http = "1.4"
itertools = "0.14"
lazy_static = "1.4"
libloading = "0.9"
log = "0.4"
moka = { version = "0.12", features = ["future"] }
nix = { version = "0.30", features = ["signal"] }
num_cpus = "1.0"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1"
opentelemetry = { version = "0.31" }
pnet = "0.35"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
rand = "0.9"
regex = "1.12"
# NOTE: We don't use the "bb8" feature because redis-rs 1.0.2's built-in bb8 implementation
# uses get_multiplexed_async_connection() with default response timeout, which causes
# blocking operations like BLPOP to timeout immediately. Instead, we implement our own
# ManageConnection to use get_multiplexed_async_connection_with_config() with response_timeout: None.
redis = { version = "1.0.2", features = [
    "tokio-rustls-comp",
    "ahash",
    "cluster-async",
] }
reqwest = "0.12"
#rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "9a771fb157056b4daa332626b2fa41b16a523756" }
rmcp = { version = "0.10" }
rs-snowflake = "0.6"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
schemars = { version = "1.2", features = ["chrono04"] }
#schemars = { version = "0.8", features = ["chrono"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "3"
serde_yaml = "0.9"
signal-hook = "0.4"
signal-hook-tokio = "0.4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "sqlite",
    "mysql",
    "chrono",
] }
stretto = "0.8"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3"
thiserror = "2"
toml = { version = "0.9" }
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tonic-web = "0.14"
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
    "json",
] }
tracing-opentelemetry = { version = "0.32" }
url = "2.5"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"
