[package]
name = "app-wrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "simple-workflow"
path = "src/main.rs"

[dependencies]

proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
memory-utils = { path = "../modules/memory-utils" }
net-utils = { path = "../modules/net-utils" }
jobworkerp-base = { path = "../base" }
jobworkerp-runner = { path = "../runner" }
infra = { path = "../infra" }
app = { path = "../app" }
# runner = { path = "../runner" }

anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
# dashmap = { workspace = true }
deadpool-redis = { workspace = true }
debug_stub_derive = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
genai = "0.4.0-alpha.3"
#genai = { git = "https://github.com/jeremychone/rust-genai", branch = "main" }
indexmap = "2"
itertools = { workspace = true }
jsonschema = "0.31"
#kube-client = "0.86"
libloading = { workspace = true }
liquid = "0.26"
nix = { workspace = true, features = ["signal"] }
ollama-rs = { version = "0.3", features = ["stream"] }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
prost = { workspace = true }
# redis = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
regress = "0.10"
reqwest = { workspace = true }
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-sse",
] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
# sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
mockall = { workspace = true }
app = { path = "../app", features = ["test-utils"] }
infra = { path = "../infra", features = ["test-utils"] }
jobworkerp-runner = { path = "../runner", features = ["test-utils"] }

[features]
default = []
test-utils = ["app/test-utils", "infra/test-utils"]
