[package]
name = "app"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]

proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
jobworkerp-base = { path = "../base" }
jobworkerp-runner = { path = "../runner" }
infra = { path = "../infra" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
debug_stub_derive = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
prost-reflect = { workspace = true }
serde = { workspace = true }
stretto = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[features]
default = []
test-utils = []

[dev-dependencies]
dotenvy = { workspace = true }
sqlx = { workspace = true }
tracing-subscriber = { workspace = true }
app = { path = ".", features = ["test-utils"] }
