[package]
name = "grpc-front"
version.workspace = true
authors.workspace = true
edition.workspace = true


[[bin]]
name = "grpc-front"
path = "src/bin/front.rs"

[dependencies]
proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
jobworkerp-base = { path = "../base" }
jobworkerp-runner = { path = "../runner" }
infra = { path = "../infra" }
app = { path = "../app" }

anyhow = { workspace = true }
async-stream = { workspace = true }
debug_stub_derive = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
