[package]
name = "grpc-front"
version.workspace = true
authors.workspace = true
edition.workspace = true


[[bin]]
name = "grpc-front"
path = "src/bin/front.rs"

[dependencies]
proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
net-utils = { path = "../modules/net-utils" }
jobworkerp-base = { path = "../base" }
jobworkerp-runner = { path = "../runner" }
infra = { path = "../infra" }
app = { path = "../app" }

anyhow = { workspace = true }
async-stream = { workspace = true }
debug_stub_derive = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
# tonic-tracing-opentelemetry = { version = "0.28" }
tonic-web = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
