[package]
name = "infra"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]

proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }

anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
deadpool-redis = { workspace = true }
debug_stub_derive = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
#kube-client = "0.86"
libloading = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = []
mysql = ["infra-utils/mysql"]
