[package]
name = "infra"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
memory-utils = { path = "../modules/memory-utils" }
infra-utils = { path = "../modules/infra-utils" }
net-utils = { path = "../modules/net-utils" }
jobworkerp-base = { path = "../base" }
jobworkerp-runner = { path = "../runner" }

anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
deadpool-redis = { workspace = true }
debug_stub_derive = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
jsonschema = "0.33"
#kube-client = "0.86"
libloading = { workspace = true }
liquid = "0.26"
nix = { workspace = true, features = ["signal"] }
once_cell = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
regress = "0.10"
reqwest = { workspace = true }
#rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

#[build-dependencies]
#tonic-prost-build = { workspace = true }

[dev-dependencies]
infra = { path = ".", features = ["test-utils"] }
jobworkerp-runner = { path = "../runner", features = ["test-utils"] }

[features]
default = []
test-utils = []
mysql = ["infra-utils/mysql"]
