[package]
name = "proto"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Protobuf definition for jobworkerp"


[dependencies]

prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
