[package]
name = "proto"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Protobuf definition for jobworkerp"


[dependencies]
command-utils = { path = "../modules/command-utils" }

anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
