[package]
name = "jobworkerp-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]

proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
memory-utils = { path = "../modules/memory-utils" }
net-utils = { path = "../modules/net-utils" }
jobworkerp-base = { path = "../base" }
# runner = { path = "../runner" }

anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
deadpool-redis = { workspace = true }
debug_stub_derive = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
jsonschema = "0.33"
#kube-client = "0.86"
libloading = { workspace = true }
nix = { workspace = true, features = ["signal"] }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
prost = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
#    "transport-io",
    "transport-sse-client",
    "reqwest",
] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
# sqlx = { workspace = true }
rustls = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sysinfo = "0.37"
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost-reflect = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[features]
default = []
test-utils = []
