[package]
name = "tests-with-worker"
version.workspace = true
edition.workspace = true
publish = false
description = "Integration tests requiring a backend worker. Must run with --test-threads=1 due to shared Redis/SQLite resources."

[dependencies]
proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
memory-utils = { path = "../modules/memory-utils" }
jobworkerp-base = { path = "../base" }
jobworkerp-runner = { path = "../runner" }
infra = { path = "../infra", features = ["test-utils"] }
app = { path = "../app", features = ["test-utils"] }
app-wrapper = { path = "../app-wrapper", features = ["test-utils"] }
worker-app = { path = "../worker-app" }

prost = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
