[package]
name = "worker-app"
version.workspace = true
authors.workspace = true
edition = "2021"


[dependencies]
proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
infra = { path = "../infra" }
app = { path = "../app" }


anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
deadpool = { workspace = true }
debug_stub_derive = { workspace = true }
envy = { workspace = true }
futures = { workspace = true, default-features = false }
http = { workspace = true }
itertools = { workspace = true }
#k8s-openapi = { version = "0.20", features = ["v1_26"] }
#kube = { version = "0.86", features = ["runtime", "derive", "ws"] }
lazy_static = { workspace = true }
libloading = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
stretto = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
