[package]
name = "jobworker"
version.workspace = true
authors.workspace = true
edition = "2021"


[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "all-in-one"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"


[dependencies]
proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
infra = { path = "../infra" }
app = { path = "../app" }
worker-app = { path = "../worker-app" }
grpc-front = { path = "../grpc-front" }

anyhow = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "process",
    "parking_lot",
] }
tracing = { workspace = true }

